[gd_scene load_steps=10 format=3 uid="uid://bxqo66k6111ej"]

[ext_resource type="Script" path="res://game/actor/actor.gd" id="1_4e8xd"]
[ext_resource type="Script" path="res://game/components/move_component.gd" id="2_qoh0q"]
[ext_resource type="Script" path="res://game/components/hurtbox_component.gd" id="3_c5u1j"]
[ext_resource type="Script" path="res://game/components/hitbox_component.gd" id="4_cpqb4"]
[ext_resource type="Script" path="res://game/components/stats_component.gd" id="5_13sbc"]
[ext_resource type="Script" path="res://game/components/hurt_component.gd" id="6_wpk36"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bmoha"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xbx2c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kc58g"]

[node name="Actor" type="Node2D"]
script = ExtResource("1_4e8xd")

[node name="Body" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bmoha")

[node name="MoveComponent" type="Node" parent="."]
script = ExtResource("2_qoh0q")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="HurtboxComponent" type="Area2D" parent="."]
script = ExtResource("3_c5u1j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("RectangleShape2D_xbx2c")

[node name="HitboxComponent" type="Area2D" parent="."]
script = ExtResource("4_cpqb4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_kc58g")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("5_13sbc")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("6_wpk36")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")
